objects/Partner_Application__c.object
<CustomObject>
    <fields>
        <fullName>Formalized_Referral_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the candidate&apos;s organization have a formalized program to receive referrals from customers?</inlineHelpText>
        <label>Formalized Referral Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_time_employees__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>How many full-time employees does the candidate currently have working for them. (Subcontractors excluded)</inlineHelpText>
        <label>Full time employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographic_Coverage_Score__c</fullName>
        <formula>IF( LEN(Location_1__c)&gt;0 , 2, 0) +
IF( LEN(Location_2__c)&gt;0 , 2, 0) +
IF( LEN(Location_3__c)&gt;0 , 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geographic Coverage (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Greater_than_20_CAGR_over_last_2_years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Greater than 20% CAGR over last 2 years</description>
        <inlineHelpText>Greater than 20% CAGR over last 2 years</inlineHelpText>
        <label>Greater than 20% CAGR over last 2 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Greater_than_30_CAGR_over_last_2_years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Greater than 30% CAGR over last 2 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Growth_plan_greater_than_50_of_median__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Growth plan greater than 50% of median</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_growth_rate_Details__c</fullName>
        <label>Historic growth rate Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historic_growth_rate_Score__c</fullName>
        <label>Historic growth rate Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_in_PV_Details__c</fullName>
        <label>History in PV Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_in_PV_Score__c</fullName>
        <label>History in PV Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_truck_Details__c</fullName>
        <label>Install truck Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_truck_Score__c</fullName>
        <label>Install truck Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Employees_Score__c</fullName>
        <formula>IF ( Installation_Employees__c &gt;= 15, 5, 
IF ( Installation_Employees__c &gt;= 12, 4, 
IF ( Installation_Employees__c &gt;= 9, 3,
IF ( Installation_Employees__c &gt;= 6, 2,
IF ( Installation_Employees__c &gt;= 3, 1,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Employees (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Employees__c</fullName>
        <formula>Manager_Installation_Employees__c +  Field_Level_Installation_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Vehicle_Fleet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation Vehicle Fleet?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Carrier_1__c</fullName>
        <inlineHelpText>Provider that candidate receives coverage from</inlineHelpText>
        <label>Insurance Carrier 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Carrier_2__c</fullName>
        <inlineHelpText>Provider that candidate receives coverage from</inlineHelpText>
        <label>Insurance Carrier 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Carrier_3__c</fullName>
        <inlineHelpText>Provider that candidate receives coverage from</inlineHelpText>
        <label>Insurance Carrier 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Coverage_1__c</fullName>
        <inlineHelpText>Amount of coverage that candidate has been insured for</inlineHelpText>
        <label>Insurance Coverage 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Coverage_2__c</fullName>
        <inlineHelpText>Amount of coverage that candidate has been insured for</inlineHelpText>
        <label>Insurance Coverage 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Coverage_3__c</fullName>
        <inlineHelpText>Amount of coverage that candidate has been insured for</inlineHelpText>
        <label>Insurance Coverage 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy_Number_1__c</fullName>
        <inlineHelpText>The actual policy number of the insurance (optional)</inlineHelpText>
        <label>Insurance Policy Number 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy_Number_2__c</fullName>
        <inlineHelpText>The actual policy number of the insurance (optional)</inlineHelpText>
        <label>Insurance Policy Number 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy_Number_3__c</fullName>
        <inlineHelpText>The actual policy number of the insurance (optional)</inlineHelpText>
        <label>Insurance Policy Number 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_1__c</fullName>
        <inlineHelpText>Type of coverage candidate has purchased policy for</inlineHelpText>
        <label>Insurance Type 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_2__c</fullName>
        <inlineHelpText>Type of coverage candidate has purchased policy for</inlineHelpText>
        <label>Insurance Type 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_3__c</fullName>
        <inlineHelpText>Type of coverage candidate has purchased policy for</inlineHelpText>
        <label>Insurance Type 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Credit_Limit_1__c</fullName>
        <description>Inverter Credit Limit #1</description>
        <inlineHelpText>Inverter Credit Limit #1</inlineHelpText>
        <label>Inverter Credit Limit #1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inverter_Credit_Limit_2__c</fullName>
        <label>Inverter Credit Limit #2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inverter_Credit_Limit_3__c</fullName>
        <description>Inverter Credit Limit #3</description>
        <inlineHelpText>Inverter Credit Limit #3</inlineHelpText>
        <label>Inverter Credit Limit #3</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inverter_Distributor_1__c</fullName>
        <label>Inverter Distributor #1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Distributor_2__c</fullName>
        <label>Inverter Distributor #2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Distributor_3__c</fullName>
        <label>Inverter Distributor #3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Product_1__c</fullName>
        <label>Inverter Product #1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Product_2__c</fullName>
        <label>Inverter Product #2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Product_3__c</fullName>
        <label>Inverter Product #3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Share_1__c</fullName>
        <description>Inverter % Share #1</description>
        <inlineHelpText>Inverter % Share #1</inlineHelpText>
        <label>Inverter % Share #1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inverter_Share_2__c</fullName>
        <description>Inverter % Share #2</description>
        <inlineHelpText>Inverter % Share #2</inlineHelpText>
        <label>Inverter % Share #2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inverter_Share_3__c</fullName>
        <description>Inverter % Share #3</description>
        <inlineHelpText>Inverter % Share #3</inlineHelpText>
        <label>Inverter % Share #3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Partner Applications</relationshipLabel>
        <relationshipName>Partner_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Details__c</fullName>
        <label>License Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Score__c</fullName>
        <label>License Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_or_qualification_Details__c</fullName>
        <label>License or qualification Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_or_qualification_Score__c</fullName>
        <label>License or qualification Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Litigation_Details__c</fullName>
        <label>Litigation Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Score__c</fullName>
        <label>Litigation Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_1_Markets__c</fullName>
        <inlineHelpText>Regions, cities that this location  sells products/services to</inlineHelpText>
        <label>Location #1 Markets</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Number_of_Employees__c</fullName>
        <inlineHelpText>Number of employees that work out of this location</inlineHelpText>
        <label>Location #1 Number of Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_1_Primary_Competition__c</fullName>
        <inlineHelpText>Solar Companies that also sell into these markets</inlineHelpText>
        <label>Location #1 Primary Competition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Type__c</fullName>
        <label>Location 1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_1__c</fullName>
        <inlineHelpText>Candidate headquarter location (City and State)</inlineHelpText>
        <label>Location #1 (City, State)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Markets__c</fullName>
        <inlineHelpText>Regions, cities that this location  sells products/services to</inlineHelpText>
        <label>Location #2 Markets</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Number_of_Employees__c</fullName>
        <inlineHelpText>Number of employees that work out of this location</inlineHelpText>
        <label>Location #2 Number of Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_2_Primary_Competition__c</fullName>
        <inlineHelpText>Solar Companies that also sell into these markets</inlineHelpText>
        <label>Location #2 Primary Competition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Type__c</fullName>
        <label>Location 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_2__c</fullName>
        <inlineHelpText>Office location (city and state)</inlineHelpText>
        <label>Location #2 (City, State)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Markets__c</fullName>
        <inlineHelpText>Regions, cities that this location  sells products/services to</inlineHelpText>
        <label>Location #3 Markets</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Number_of_Employees__c</fullName>
        <inlineHelpText>Number of employees that work out of this location</inlineHelpText>
        <label>Location #3 Number of Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_3_Primary_Competition__c</fullName>
        <inlineHelpText>Solar Companies that also sell into these markets</inlineHelpText>
        <label>Location #3 Primary Competition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Type__c</fullName>
        <label>Location 3 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_3__c</fullName>
        <inlineHelpText>Office location (city and state)</inlineHelpText>
        <label>Location #3 (City, State)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Customer_Service_Employees__c</fullName>
        <description>Case 385729</description>
        <inlineHelpText>How many Customer Service Managers does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Manager Customer Service Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Design_Employees__c</fullName>
        <inlineHelpText>How many Design Managers does the candidate&apos;s organization currently employ</inlineHelpText>
        <label>Manager Design Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Employees__c</fullName>
        <formula>Manager_Marketing_Employees__c +
 Field_Level_Marketing_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many manager level employees does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Manager Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Finance_Employees__c</fullName>
        <inlineHelpText>How many Finance Managers does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Manager Finance Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Installation_Employees__c</fullName>
        <inlineHelpText>How many Installation Managers does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Manager Installation Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Level_Employees__c</fullName>
        <formula>Manager_Design_Employees__c +  Manager_Finance_Employees__c +  
Manager_Installation_Employees__c +  Manager_Marketing_Employees__c +  
Manager_Operations_Employees__c +  Manager_Other_Employees__c +  
Manager_Sales_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many Design managers does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Manager-Level Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Marketing_Employees__c</fullName>
        <inlineHelpText>How many Marketing Managers does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Manager Marketing Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Operations_Employees__c</fullName>
        <inlineHelpText>How many Operations Managers does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Manager Operations Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Other_Employees__c</fullName>
        <label>Manager Other Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Sales_Employees__c</fullName>
        <inlineHelpText>How many Sales Managers does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Manager Sales Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Technical_Employees__c</fullName>
        <description>Case 385729</description>
        <inlineHelpText>How many Technicial Managers does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Manager Technical Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer_1_Credit_Line__c</fullName>
        <label>Manufacturer / Distributor 1 Credit Line</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer_1__c</fullName>
        <label>Manufacturer / Distributor 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_2_Credit_Line__c</fullName>
        <label>Manufacturer / Distributor 2 Credit Line</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer_2__c</fullName>
        <label>Manufacturer / Distributor 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_3_Credit_Line__c</fullName>
        <label>Manufacturer / Distributor 3 Credit Line</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer_3__c</fullName>
        <label>Manufacturer / Distributor 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Employees_Score__c</fullName>
        <formula>IF ( Marketing_Employees__c &gt;= 6, 5,
IF ( Marketing_Employees__c &gt;= 3, 3,
IF ( Marketing_Employees__c &gt;= 1, 1, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Employees (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Employees__c</fullName>
        <formula>Field_Level_Marketing_Employees__c +  Manager_Marketing_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many employees currently work within the marketing department?</inlineHelpText>
        <label>Marketing Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Manager_Details__c</fullName>
        <label>Marketing Manager Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Manager_Score__c</fullName>
        <label>Marketing Manager Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Material?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Source_1_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How much business does this method generate (All three sources combined cannot exceed 100%)</inlineHelpText>
        <label>Marketing Source 1 (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marketing_Source_1_Score__c</fullName>
        <formula>IF ( Marketing_Source_1_Percent__c &gt;0.05, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Source 1 (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Source_1__c</fullName>
        <inlineHelpText>Candidate&apos;s method of generating new business</inlineHelpText>
        <label>Marketing Source 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source_2_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How much business does this method generate (All three sources combined cannot exceed 100%)</inlineHelpText>
        <label>Marketing Source 2 (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marketing_Source_2_Score__c</fullName>
        <formula>IF ( Marketing_Source_2_Percent__c &gt;0.05, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Source 2 (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Source_2__c</fullName>
        <inlineHelpText>Candidate&apos;s method of generating new business</inlineHelpText>
        <label>Marketing Source 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source_3_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How much business does this method generate (All three sources combined cannot exceed 100%)</inlineHelpText>
        <label>Marketing Source 3 (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marketing_Source_3__c</fullName>
        <inlineHelpText>Candidate&apos;s method of generating new business</inlineHelpText>
        <label>Marketing Source 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendee_Name_1__c</fullName>
        <inlineHelpText>Meeting attendee from the candidate</inlineHelpText>
        <label>Meeting Attendee Name 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendee_Name_2__c</fullName>
        <inlineHelpText>Meeting attendee from the candidate</inlineHelpText>
        <label>Meeting Attendee Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendee_Name_3__c</fullName>
        <inlineHelpText>Meeting attendee from the candidate</inlineHelpText>
        <label>Meeting Attendee Name 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendee_Title_1__c</fullName>
        <inlineHelpText>Role that attendee plays within the candidate&apos;s organization</inlineHelpText>
        <label>Meeting Attendee Title 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendee_Title_2__c</fullName>
        <inlineHelpText>Role that attendee plays within the candidate&apos;s organization</inlineHelpText>
        <label>Meeting Attendee Title 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendee_Title_3__c</fullName>
        <inlineHelpText>Role that attendee plays within the candidate&apos;s organization</inlineHelpText>
        <label>Meeting Attendee Title 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <inlineHelpText>What was the date that SunPower met with the candidate to go through scorecard</inlineHelpText>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_of_Local_Business_Orgs_Details__c</fullName>
        <label>Member of Local Business Orgs (Details)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_of_Local_Business_Orgs_Score__c</fullName>
        <formula>IF( Member_of_Local_Business_Orgs__c , 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member of Local Business Orgs (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_of_Local_Business_Orgs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Example: Chamber of Commerce, Green Business Group, etc.</inlineHelpText>
        <label>Member of Local Business Orgs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Monitoring_Distributor_1__c</fullName>
        <label>Monitoring Distributor #1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Distributor_2__c</fullName>
        <label>Monitoring Distributor #2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Distributor_3__c</fullName>
        <label>Monitoring Distributor #3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Product_1__c</fullName>
        <label>Monitoring Product #1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Product_2__c</fullName>
        <label>Monitoring Product #2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Product_3__c</fullName>
        <label>Monitoring Product #3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_to_Solar__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this candidate new to solar?</inlineHelpText>
        <label>New to Solar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_major_partner_faulted_litigation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No major partner faulted litigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_2_years_ago__c</fullName>
        <label>Number of Employees (2 years ago)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_3_years_ago__c</fullName>
        <label>Number of Employees (3 years ago)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_Q1__c</fullName>
        <label>Number of Employees (Q1)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_Q2__c</fullName>
        <label>Number of Employees (Q2)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_Q3__c</fullName>
        <label>Number of Employees (Q3)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_last_year__c</fullName>
        <label>Number of Employees (last year)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operations_Employees_Score__c</fullName>
        <formula>IF( Field_Level_Operations_Employees__c + Manager_Operations_Employees__c&gt;=6,5, 
IF( Field_Level_Operations_Employees__c + Manager_Operations_Employees__c&gt;=3,3, 
IF( Field_Level_Operations_Employees__c + Manager_Operations_Employees__c&gt;=1,1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operations Employees(Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organized_referral_program_Details__c</fullName>
        <label>Organized referral program Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organized_referral_program_Score__c</fullName>
        <label>Organized referral program Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_1_DOB__c</fullName>
        <description>Case 00385729</description>
        <label>Owner 1 DOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_of_Ownership__c</fullName>
        <description>Case 00385729</description>
        <label>Owner 1 % of Ownership</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>